--- a/multiples-of-3-or-5/index.html
+++ b/multiples-of-3-or-5/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../assets/prism.css">
+    <link rel="stylesheet" href="../assets/codeblocks.css">
     <title>CodeWars - Need4Swede</title>
 </head>
 <body>
@@ -69,7 +69,7 @@ multiplesOf3or5(88);
     </div>
     <!-- CODE JS FILE -->
     <script src="Multiples-of-3-or-5.js"></script>
-    <!-- PRISM JS FILE -->
-    <script src="../assets/prism.js"></script>
+    <!-- CODE BLOCKS JS FILE -->
+    <script src="../assets/codeblocks.js"></script>
 </body>
 </html>
