--- a/multiples-of-3-or-5/index.html
+++ b/multiples-of-3-or-5/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../assets/codeblocks.css">
+    <link rel="stylesheet" id="css" href="../assets/codeblocks.css">
     <title>CodeWars - Need4Swede</title>
 </head>
+<header>
+    <div class="colorful-switch">
+      <input type="checkbox" class="colorful-switch__checkbox" id="colorful-switch-cb" />
+      <label class="colorful-switch__label" for="colorful-switch-cb">
+        <span class="colorful-switch__bg"></span>
+        <span class="colorful-switch__dot"></span>
+        <span class="colorful-switch__on">
+          <span class="colorful-switch__on__inner"></span>
+        </span>
+        <span class="colorful-switch__off"></span>
+      </label>
+    </div>
+  </header>
 <body>
     <h2>The Function</h2>
     <section>
@@ -72,5 +85,6 @@ multiplesOf3or5(88);
     <script src="Multiples-of-3-or-5.js"></script>
     <!-- CODE BLOCKS JS FILE -->
     <script src="../assets/codeblocks.js"></script>
+    <script src="../assets/colors.js"></script>
 </body>
 </html>
