Multiples of 3 or 5
added color mode text

--- a/multiples-of-3-or-5/index.html
+++ b/multiples-of-3-or-5/index.html
@@ -19,8 +19,9 @@
         </span>
         <span class="colorful-switch__off"></span>
       </label>
+      <p id="color-mode-text">Dark Mode</p>
     </div>
-  </header>
+</header>
 <body>
     <h2>The Function</h2>
     <section>
