--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -64,6 +64,7 @@ squareSum([12, 5, 44]);
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/515e271a311df0350d00000f/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
+    <iframe src="https://jsconsole.com/" width="960" height="200"></iframe>
     </section>
     </div>
     <!-- CODE JS FILE -->
