Sum Mixed Array
added JS Console

--- a/sum-mixed-array/index.html
+++ b/sum-mixed-array/index.html
@@ -80,6 +80,7 @@ sumMix([52, '144', '12', 67]);
 <!-- CODE ALT END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/57eaeb9578748ff92a000009/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
+    <iframe src="https://jsconsole.com/" width="960" height="300" frameborder="0"></iframe>
     </section>
     </div>
     <!-- CODE JS FILE -->
