--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -64,7 +64,7 @@ squareSum([12, 5, 44]);
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/515e271a311df0350d00000f/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
-    <iframe id="jsConsole" src="https://jsconsole.com/" width="960" height="200" frameborder="0"></iframe>
+    <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
     </div>
     <!-- CODE JS FILE -->
@@ -72,5 +72,3 @@ squareSum([12, 5, 44]);
     <!-- CODE BLOCKS JS FILE -->
     <script src="../assets/codeblocks.js"></script>
     <script src="../assets/colors.js"></script>
-</body>
-</html>
