--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -39,9 +39,10 @@ squareSum([1, 2, 3]);
 squareSum([12, 5, 44]);
 // 2105
 </code></pre>
-<!-- CODE EXAMPLE END -->
-    <p><strong>Solution by</strong> - <a href="https://github.com/need4swede" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+        <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+        <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
+<!-- CODE EXAMPLE END -->
     <div class="underline"></div>
     <h2>How it works</h2>
     <section class="functions">
@@ -64,7 +65,6 @@ squareSum([12, 5, 44]);
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/515e271a311df0350d00000f/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
-    <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
     </div>
     <!-- CODE JS FILE -->
