--- a/sum-mixed-array/index.html
+++ b/sum-mixed-array/index.html
@@ -39,9 +39,10 @@ sumMix([5, '5']);
 sumMix([52, '144', '12', 67]); 
 // 275
 </code></pre>
-<!-- CODE EXAMPLE END -->
-    <p><strong>Solution by</strong> - <a href="https://github.com/need4swede" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+      <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+      <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
+<!-- CODE EXAMPLE END -->
     <div class="underline"></div>
     <h2>How it works</h2>
     <section class="functions">
@@ -80,7 +81,6 @@ sumMix([52, '144', '12', 67]);
 <!-- CODE ALT END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/57eaeb9578748ff92a000009/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
-    <iframe id="jsConsole" src="https://jsconsole.com/" width="960" height="200" frameborder="0"></iframe>
     </section>
     </div>
     <!-- CODE JS FILE -->
