Multiples of 3 or 5
Added jsconsole

--- a/multiples-of-3-or-5/index.html
+++ b/multiples-of-3-or-5/index.html
@@ -41,9 +41,10 @@ multiplesOf3or5(10);
 multiplesOf3or5(88);
 // 1845
 </code></pre>
-<!-- CODE EXAMPLE END -->
-    <p><strong>Solution by</strong> - <a href="https://github.com/need4swede" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+        <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+        <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
+<!-- CODE EXAMPLE END -->
     <div class="underline"></div>
     <h2>How it works</h2>
     <section class="functions">
