Sum Mixed Array
Dark Mode => Read Mode

--- a/sum-mixed-array/index.html
+++ b/sum-mixed-array/index.html
@@ -19,7 +19,7 @@
       </span>
       <span class="colorful-switch__off"></span>
     </label>
-    <p id="color-mode-text">Dark Mode</p>
+    <p id="color-mode-text">Read Mode</p>
   </div>
 </header>
 <body>
