--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -21,6 +21,18 @@
       </label>
       <p id="color-mode-text">Dark Mode</p>
     </div>
+    <div class="colorful-switch-2">
+      <input type="checkbox" class="colorful-switch__checkbox-2" id="colorful-switch-cb-2" />
+      <label class="colorful-switch__label-2" for="colorful-switch-cb-2">
+        <span class="colorful-switch__bg-2"></span>
+        <span class="colorful-switch__dot-2"></span>
+        <span class="colorful-switch__on-2">
+          <span class="colorful-switch__on__inner-2"></span>
+        </span>
+        <span class="colorful-switch__off-2"></span>
+      </label>
+      <p id="console-mode-text">Enable Console</p>
+    </div>
 </header>
 <body>
     <h2>The Function</h2>
