--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -53,6 +53,7 @@ squareSum([12, 5, 44]);
 </code></pre>
         <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
         <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
+        <iframe id="jsConsole-light" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
 <!-- CODE EXAMPLE END -->
     <div class="underline"></div>
