--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -9,6 +9,7 @@
     <title>CodeWars - Need4Swede</title>
 </head>
 <header>
+    <!-- COLOR BUTTON -->
     <div class="colorful-switch">
       <input type="checkbox" class="colorful-switch__checkbox" id="colorful-switch-cb"/>
       <label class="colorful-switch__label" for="colorful-switch-cb">
@@ -21,6 +22,7 @@
       </label>
       <p id="color-mode-text">Dark Mode</p>
     </div>
+    <!-- CONSOLE BUTTON -->
     <div class="colorful-switch-2">
       <input type="checkbox" class="colorful-switch__checkbox-2" id="colorful-switch-cb-2"/>
       <label class="colorful-switch__label-2" for="colorful-switch-cb-2">
