--- a/reverse-string/index.html
+++ b/reverse-string/index.html
@@ -47,10 +47,10 @@
 */
 
 reverseString('world');
-// 'dlrow'
+// "dlrow"
 
 reverseString('JavaScript');
-// 'tpircSavaJ'
+// "tpircSavaJ"
 </code></pre>
       <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
       <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
