--- a/inverse-number/index.html
+++ b/inverse-number/index.html
@@ -40,16 +40,16 @@
     <h2>The Function</h2>
     <section>
 <!-- CODE EXAMPLE START -->
-<pre><code class="language-javascript">opposite(number);
+<pre><code class="language-javascript">inverseNum(number);
 
 /*
   Inverse the number from positive to negative, or vice versa
 */
 
-opposite(15);
+inverseNum(15);
 // -15
 
-opposite(-8);
+inverseNum(-8);
 // 8
 </code></pre>
       <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
@@ -61,7 +61,7 @@ opposite(-8);
     <h2>How it works</h2>
     <section class="functions">
 <!-- CODE START -->
-<pre><code class="language-javascript">function opposite(number) {
+<pre><code class="language-javascript">function inverseNum(number) {
   
   // Multiply number by two, and subtract it by its initial value to get its inverse
   number = number - (number * 2);
@@ -76,7 +76,7 @@ opposite(-8);
 <div class="underline"></div>
 <p class="annotation">Alternatively, you can write it like this...</p>
 <!-- CODE ALT START-->
-<pre><code class="language-javascript">function opposite(number) {
+<pre><code class="language-javascript">function inverseNum(number) {
   return(-number);
 }
 </code></pre>
