--- a/inverse-number/index.html
+++ b/inverse-number/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="stylesheet" id="css" href="../assets/codeblocks.css">
-    <title>CodeWars - Need4Swede</title>
+    <title>Codewars - Need4Swede</title>
 </head>
 <header>
     <!-- COLOR BUTTON -->
@@ -52,7 +52,7 @@ inverseNum(15);
 inverseNum(-8);
 // 8
 </code></pre>
-      <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+      <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/Codewars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
       <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
       <iframe id="jsConsole-light" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
@@ -82,7 +82,7 @@ inverseNum(-8);
 </code></pre>
 <!-- CODE ALT END -->
     <!-- CODEWARS LINK -->
-    <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/56dec885c54a926dcd001095/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
+    <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/56dec885c54a926dcd001095/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
