--- a/multiples-of-3-or-5/index.html
+++ b/multiples-of-3-or-5/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="stylesheet" id="css" href="../assets/codeblocks.css">
-    <title>CodeWars - Need4Swede</title>
+    <title>Codewars - Need4Swede</title>
 </head>
 <header>
     <!-- COLOR BUTTON -->
@@ -55,7 +55,7 @@ multiplesOf3or5(10);
 multiplesOf3or5(88);
 // 1845
 </code></pre>
-        <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+        <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/Codewars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
         <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
         <iframe id="jsConsole-light" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
@@ -95,7 +95,7 @@ multiplesOf3or5(88);
 </code></pre>
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
-    <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/514b92a657cdc65150000006/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
+    <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/514b92a657cdc65150000006/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
     </section>
     </div>
     <!-- CODE BLOCKS JS FILE -->
