--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="stylesheet" id="css" href="../assets/codeblocks.css">
-    <title>CodeWars - Need4Swede</title>
+    <title>Codewars - Need4Swede</title>
 </head>
 <header>
     <!-- COLOR BUTTON -->
@@ -53,7 +53,7 @@ squareSum([1, 2, 3]);
 squareSum([12, 5, 44]);
 // 2105
 </code></pre>
-        <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/CodeWars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
+        <p><strong>Solution by</strong> - <a href="https://need4swede.github.io/Codewars-JavaScript/" target="_blank"><span class="background-black">Need4Swede</span></a></p>
         <iframe id="jsConsole" src="" width="960" height="0" frameborder="0"></iframe>
         <iframe id="jsConsole-light" src="" width="960" height="0" frameborder="0"></iframe>
     </section>
@@ -79,7 +79,7 @@ squareSum([12, 5, 44]);
 </code></pre>
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
-    <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/515e271a311df0350d00000f/train/javascript" target="_blank"><span class="background-black">CodeWars Source</span></a></p>
+    <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/515e271a311df0350d00000f/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
     </section>
     </div>
     <!-- CODE BLOCKS JS FILE -->
