Return Index of all Capital Letters

--- a/find-capitals/index.html
+++ b/find-capitals/index.html
@@ -84,7 +84,7 @@ findCapitals('NeeD4SwedE')
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/539ee3b6757843632d00026b/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
-    <p><a href="#start"><strong class="gotoconsole">If you want to try the code yourself, you can use my built-in JS console</strong></a></p>  
+    <p><a href="#start"><strong class="gotoconsole">You can also click here to use my built-in JavaScript console</strong></a></p>  
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
