--- a/inverse-number/index.html
+++ b/inverse-number/index.html
@@ -87,6 +87,6 @@ inverseNum(-8);
     </div>
     <!-- CODE BLOCKS JS -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
