--- a/merge-and-sort-arrays/index.html
+++ b/merge-and-sort-arrays/index.html
@@ -120,6 +120,6 @@ mergeArrays([2, 155, 20], [51, 4241, 33, 88, 24]);
     </div>
     <!-- CODE BLOCKS JS -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
