--- a/square-sum/index.html
+++ b/square-sum/index.html
@@ -84,4 +84,4 @@ squareSum([12, 5, 44]);
     </div>
     <!-- CODE BLOCKS JS FILE -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
