--- a/string-to-array/index.html
+++ b/string-to-array/index.html
@@ -75,6 +75,6 @@ stringToArray("Convert this into an array");
     </div>
     <!-- CODE BLOCKS JS -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
