--- a/sum-mixed-array/index.html
+++ b/sum-mixed-array/index.html
@@ -100,6 +100,6 @@ sumMix([52, '144', '12', 67]);
     </div>
     <!-- CODE BLOCKS JS -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
