--- a/find-capitals/index.html
+++ b/find-capitals/index.html
@@ -84,11 +84,11 @@ findCapitals('NeeD4SwedE')
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/539ee3b6757843632d00026b/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
-    <p><a href="#start"><strong class="gotoconsole">You can also click here to use my built-in JavaScript console</strong></a></p>  
+    <p><a href="#start"><strong class="gotoconsole">You can also use my <span class="background-black">built-in JavaScript console</span></strong></a></p>  
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
