--- a/multiples-of-3-or-5/index.html
+++ b/multiples-of-3-or-5/index.html
@@ -100,6 +100,6 @@ multiplesOf3or5(88);
     </div>
     <!-- CODE BLOCKS JS FILE -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
