--- a/reverse-string/index.html
+++ b/reverse-string/index.html
@@ -93,6 +93,6 @@ reverseString('JavaScript');
     </div>
     <!-- CODE BLOCKS JS -->
     <script src="../assets/codeblocks.js"></script>
-    <script src="../assets/colors.js"></script>
+    <script src="../assets/console.js"></script>
 </body>
 </html>
