Count Positives, Sum Negatives

--- a/count-p-sum-n/index.html
+++ b/count-p-sum-n/index.html
@@ -40,6 +40,7 @@
     <h2>The Function</h2>
     <section>
 <!-- CODE EXAMPLE START -->
+<div id="start"></div>
 <pre><code class="language-javascript">countPsumN(input)
 
 /*
@@ -95,6 +96,7 @@ countPsumN([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, -11, -12, -13, -14, -15]);
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/576bb71bbbcf0951d5000044/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
+    <p><a href="#start"><strong class="gotoconsole">You can also use my <span class="background-black">built-in JavaScript console</span></strong></a></p>    
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
