--- a/assets/jsconsole/jsconsole-light.html
+++ b/assets/jsconsole/jsconsole-light.html
@@ -19,8 +19,7 @@
                             <a title="Permalink" class="icon link">link</a>
                             <button title="Copy" class="icon copy">copy</button>
                         </div><div class="type string toggle bareString">
-                            <button class="icon expand">+</button><span>Write Mode <strong>Enabled</strong>
-                                Copy / Paste the function code and run it to try it out for yourself :)</span>
+                            <button class="icon expand">+</button><span>
                             </div>
                         </div>
                     </div>
