--- a/assets/jsconsole/jsconsole-light.html
+++ b/assets/jsconsole/jsconsole-light.html
@@ -6,8 +6,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link id="consoleCSS" href="./jsconsole_files/console-light.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin="true">
-        <link rel="preconnect" href="https://fonts.gstatic.com/"><link rel="stylesheet" href="./jsconsole_files/css2">
+        <link rel="stylesheet" href="./jsconsole_files/css2">
         <title>jsconsole</title>
     </head>
     <body>
