--- a/assets/jsconsole/jsconsole.html
+++ b/assets/jsconsole/jsconsole.html
@@ -6,7 +6,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link id="consoleCSS" href="./jsconsole_files/console.css" rel="stylesheet">
-        <link rel="stylesheet" href="./jsconsole_files/css2">
+        <link rel="stylesheet" href="./jsconsole_files/fonts.css">
         <title>jsconsole</title>
     </head>
     <body>
