--- a/reverse-string/index.html
+++ b/reverse-string/index.html
@@ -40,6 +40,7 @@
     <h2>The Function</h2>
     <section>
 <!-- CODE EXAMPLE START -->
+<div id="start"></div>
 <pre><code class="language-javascript">reverseString(str)
 
 /*
@@ -89,6 +90,7 @@ reverseString('JavaScript');
 <!-- CODE ALT END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/5168bb5dfe9a00b126000018/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
+    <p><a href="#start"><strong class="gotoconsole">You can also use my <span class="background-black">built-in JavaScript console</span></strong></a></p>  
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
