--- a/string-to-array/index.html
+++ b/string-to-array/index.html
@@ -40,6 +40,7 @@
     <h2>The Function</h2>
     <section>
 <!-- CODE EXAMPLE START -->
+<div id="start"></div>
 <pre><code class="language-javascript">stringToArray(string)
 
 /*
@@ -71,6 +72,7 @@ stringToArray("Convert this into an array");
 <!-- CODE END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/57e76bc428d6fbc2d500036d/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
+    <p><a href="#start"><strong class="gotoconsole">You can also use my <span class="background-black">built-in JavaScript console</span></strong></a></p>
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
