--- a/sum-mixed-array/index.html
+++ b/sum-mixed-array/index.html
@@ -40,6 +40,7 @@
     <h2>The Function</h2>
     <section>
 <!-- CODE EXAMPLE START -->
+<div id="start"></div>
 <pre><code class="language-javascript">sumMix(x)
 
 /*
@@ -96,6 +97,7 @@ sumMix([52, '144', '12', 67]);
 <!-- CODE ALT END -->
     <!-- CODEWARS LINK -->
     <p><strong>Try it yourself</strong> - <a href="https://www.codewars.com/kata/57eaeb9578748ff92a000009/train/javascript" target="_blank"><span class="background-black">Codewars Source</span></a></p>
+    <p><a href="#start"><strong class="gotoconsole">You can also use my <span class="background-black">built-in JavaScript console</span></strong></a></p>
     </section>
     </div>
     <!-- CODE BLOCKS JS -->
